--- a/Introduccion-a-NodeJS/node/package.json
+++ b/Introduccion-a-NodeJS/node/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/HikkizZ/ISW-Ayudantia-2023/issues"
   },
-  "homepage": "https://github.com/HikkizZ/ISW-Ayudantia-2023#readme"
+  "homepage": "https://github.com/HikkizZ/ISW-Ayudantia-2023#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
