--- a/Introduccion-a-NodeJS/node/package.json
+++ b/Introduccion-a-NodeJS/node/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/HikkizZ/ISW-Ayudantia-2023#readme",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
