MOD package.json
Se añade script para iniciar nodemon

--- a/Introduccion-a-NodeJS/node/package.json
+++ b/Introduccion-a-NodeJS/node/package.json
@@ -4,6 +4,7 @@
   "description": "Ayudantia ISW-2023 Clase 2",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
